force-app/main/default/objects/ERP_Settings__c/ERP_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description></description>
    <label>ERP Settings</label>
</CustomObject>