force-app/main/default/objects/ERP_Settings__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>Url</type>
    <description>Endpoint</description>
</CustomField>