force-app/main/default/objects/ERP_Settings__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <type>Text</type>
    <length>80</length>
    <description>Named Credential</description>
</CustomField>